P2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app1
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app2
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app3
